--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 </head>
 <body>
 <h1> This is a web page </h1>
-Hello World! I have now changed something
+
+“I am convinced that if we are to get on the right side of the world revolution, we as a nation must undergo a radical revolution of values. We must rapidly begin the shift from a thing-oriented society to a person-oriented society. When machines and computers, profit motives and property rights are considered more important than people, the giant triplets of racism, extreme materialism and militarism are incapable of being conquered.”
+– Martin Luther King, Jr. “Beyond Vietnam,” Riverside Church, NYC, April 4, 1967
+  
 </body>
 </html>
