--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <head>
 </head>
 <body>
-<h1> This is a web page </h1>
-
-“I am convinced that if we are to get on the right side of the world revolution, we as a nation must undergo a radical revolution of values. We must rapidly begin the shift from a thing-oriented society to a person-oriented society. When machines and computers, profit motives and property rights are considered more important than people, the giant triplets of racism, extreme materialism and militarism are incapable of being conquered.”
-– Martin Luther King, Jr. “Beyond Vietnam,” Riverside Church, NYC, April 4, 1967
+<h1> Ansgar Jordan </h1>
+  <h2> ansgar.jordan@tufts.edu <br> +1 858-291-0534 </h2>
+  <h3> Major: Data Science <br> My IP address is: 130.64.25.58 </h3>
+  <h4> Something people don't know about me: I am very passionate about cooking! </h4>
+  <img src = "https://github.com/AnsgarJordan/Comp20/issues/1">
   
+
+
 </body>
 </html>
