--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <h2> ansgar.jordan@tufts.edu <br> +1 858-291-0534 </h2>
   <h3> Major: Data Science <br> My IP address is: 130.64.25.58 </h3>
   <h4> Something people don't know about me: I am very passionate about cooking! </h4>
-  <img src = "https://github.com/AnsgarJordan/Comp20/issues/1">
+  <img width="106" alt="Screenshot_1" src="https://user-images.githubusercontent.com/60148893/73200133-339fb280-4104-11ea-8138-00a6aeb09f0b.png">
+
   
 
 
